Page with content and subpage

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/abdfb0bcb4.js" crossorigin="anonymous"></script>
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="css.css">
-        <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -22,9 +21,9 @@
 
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Recipies</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="subpage.html">Recipies</a></li>
+                        <li><a href="subpage.html">About</a></li>
+                        <li><a href="subpage.html">Contact</a></li>
                     </ul>
                 </div>
             </header>
@@ -68,18 +67,24 @@
             </div>
 
             <div class="trending-recepies">
-                <i class="fa-thin fa-arrow-trend-up"></i>
-                <p>Trending Reciepies</p>
+                <p><i class="fa fa-arrow-trend-up"></i> Trending Reciepies</p>
                 <div class="recepies-container">
-                    <img class="recepy" src="img/photo/pancakes.jpg" alt="Cookies">
-                    <img class="recepy" src="img/photo/musli.jpg" alt="Cookies">
-                    <img class="recepy" src="img/photo/pumpkin_pie.jpg" alt="Cookies">
+                    <img class="recepy" src="img/photo/pancakes.jpg" alt="Pancakes">
+                    <img class="recepy" src="img/photo/musli.jpg" alt="Musli">
+                    <img class="recepy" src="img/photo/pumpkin_pie.jpg" alt="Pumpkin_pie">
                 </div>
             </div>
         </div>
 
         <footer>
-            <p>2022 EasyMeals. All rights reserved.</p>
+            <p> &copy; 2022 EasyMeals. All rights reserved.</p>
+            
+            <div class="media-icons">
+                <i class="fa-brands fa-instagram fa-3x"></i>
+                <i class="fa-brands fa-facebook-square fa-3x"></i>
+                <i class="fa-brands fa-twitter fa-3x"></i>
+                <i class="fa-brands fa-pinterest-square fa-3x"></i>
+            </div>
         </footer>
     </body>
 
